All notable changes to ampycloud will be documented in this file.

The format is inspired from [Keep a Changelog](https://keepachangelog.com/en/1.0.0/).
This project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).


## [Unreleased]
### Added:
### Fixed:
### Changed:
### Deprecated:
### Removed:
### Security:

## [v0.1.0]
### Added:
 - [fpavogt, 2021-12-21] Add tests to check real data for scientific stability (fixes #33).
 - [fpavogt, 2021-12-17] Add CODE_OF_CONDUCT.md and auto-doc-publish action, incl. first doc release.
 - [fpavogt, 2021-12-16] Add a new entry point for `copy_prm_file`, i.e. fix #26.
 - [fpavogt, 2021-12-15] Add `msa` to `plots.diagnostic`, i.e. fix #22.
 - [fpavogt, 2021-12-10] Add Minimum Sector Altitude to the metar_msg() method.
 - [fpavogt, 2021-12-10] Add detailed examples to the core functions, and link them in the doc.
 - [fpavogt, 2021-12-10] Add the performance module, and a dedicated high level entry point.
 - [fpavogt, 2021-12-10] Improve plots with show, save, close methods, and tweak their look.
 - [fpavogt, 2021-12-10] Add pytest ficture to let users feed 'MPL_STYLE' as a command line argument
 - [fpavogt, 2021-12-09] Add the plots module.
 - [fpavogt, 2021-12-08] Add the MANIFEST.in file, to include parameter and plot style files.
 - [fpavogt, 2021-12-08] Add the data, dynamic, and core modules, and a new AmpycloudWarning class.
 - [fpavogt, 2021-12-07] Add the wmo, scaler, layer, cluster, and utils.mocker modules.
 - [fpavogt, 2021-12-07] Add the AmpycloudError class.
 - [fpavogt, 2021-12-06] Setup logging tools, incl. custom decorator for fcts.
 - [fpavogt, 2021-12-06] Setup docs, including instructions and a CI/CD "check" Action.
 - [fpavogt, 2021-12-06] Initial Github upload, incl. CI/CD actions, package & test infrastructure.
### Fixed:
 - [fpavogt, 2021-12-23] Fix warning when plotting empty chunks, and correctly handle single points.
 - [fpavogt, 2021-12-20] Fix #30 and #31.