@@ -7,6 +7,7 @@ This project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.htm
 ## [Unreleased]
 ### Added:
 ### Fixed:
+ - [fpavogt, 2022-01-10] Fix issues #40 and #41.
 ### Changed:
 ### Deprecated:
 ### Removed:
